SET(PROJECT_NAME monodepth2)
PROJECT(${PROJECT_NAME})
CMAKE_MINIMUM_REQUIRED (VERSION 2.8.3)
SET(CMAKE_BUILD_TYPE Release) # Release, RelWithDebInfo
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/CMakeModules/")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC")

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/libtorch)
# Find package
FIND_PACKAGE(OpenCV REQUIRED)

# Find package for TensofFlow
FIND_PACKAGE(Protobuf REQUIRED)
FIND_PACKAGE(Torch REQUIRED)


INCLUDE_DIRECTORIES(
  ${OpenCV_INCLUDE_DIRS}
  ${PROTOBUF_INCLUDE_DIRS}
  ${TORCH_LIBRARIES}
)

# Create monodepth library
ADD_LIBRARY(${PROJECT_NAME}_static STATIC monodepth.cpp)
ADD_LIBRARY(${PROJECT_NAME} SHARED monodepth.cpp)
# Link the libraries to the library
TARGET_LINK_LIBRARIES(${PROJECT_NAME}_static
    ${OpenCV_LIBS}
    ${PROTOBUF_LIBRARIES}
    ${TORCH_LIBRARIES}
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${OpenCV_LIBS}
    ${PROTOBUF_LIBRARIES}
    ${TORCH_LIBRARIES}
)

# Create Executables (Test only)
ADD_EXECUTABLE(inference_monodepth inference_monodepth.cpp)
TARGET_LINK_LIBRARIES(inference_monodepth ${PROJECT_NAME})